# crowdcurate

./: .gitignore  README.md  pyproject.toml
src/crowdcurate/: __init__.py  __main__.py  app.py  cache.py  controller.py  metadata.py  model.py  view.py
tests/: conftest.py  test_controller.py  test_integration_open_with.py  test_metadata.py  test_model.py  test_view.py
