[project]
name = "crowdcurate"
version = "0.1.0"
description = "A maintainable tkinter slideshow application with MVC architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pylint>=2.20",
    "ruff>=0.0.300",
    "mypy>=1.6",
    "black>=24.0"
]

[project.scripts]
crowdcurate = "crowdcurate.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "N", "C"]
per-file-ignores = {"tests/**" = ["S101"]}

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = 3.11
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
